<resources>
    <string name="SS_ANY_CUSTOMIZATIONS_YOU_HAVE_MADE_WILL_BE_RESET_TO_ALPHABETICAL_ORDER_GLOBAL">The App list will be rearranged in alphabetical order. Any customisations you have made will be discarded.</string>
    <string name="SS_ANY_CUSTOMIZATIONS_YOU_HAVE_MADE_WILL_BE_RESET_TO_ALPHABETICAL_ORDER_US">Any customizations you have made will be reset to alphabetical order.</string>
    <string name="SS_A_Z_ABB">A-Z</string>
    <string name="SS_FRI">Fri</string>
    <string name="SS_FRIDAY">Friday</string>
    <string name="SS_MON">Mon</string>
    <string name="SS_MONDAY">Monday</string>
    <string name="SS_SAT">Sat</string>
    <string name="SS_SATURDAY">Saturday</string>
    <string name="SS_SORT_ALPHABETICALLY_HEADER_ABB_US">Sort alphabetically</string>
    <string name="SS_SUN">Sun</string>
    <string name="SS_SUNDAY">Sunday</string>
    <string name="SS_THU">Thu</string>
    <string name="SS_THURSDAY">Thursday</string>
    <string name="SS_TUE">Tue</string>
    <string name="SS_TUESDAY">Tuesday</string>
    <string name="SS_WED">Wed</string>
    <string name="SS_WEDNESDAY">Wednesday</string>
    <string name="TS_SORT_BUTTON_ABB">Sort</string>
    <string name="accessibility_add_homescreen">Add page</string>
    <string name="active_background">page_view_overlay_02.9.png</string>
    <string name="activity_not_found">Application not installed</string>
    <string name="add_widget_failed">Failed to add widget, authorization declined.</string>
    <string name="all_apps_button_label">Applications</string>
    <string name="alphabetical_list_indicator_indexes">\#ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="app_name">TouchWiz home</string>
    <string name="apply">Apply</string>
    <string name="apps">Apps</string>
    <string name="apps_grid_guide_image_path">apps_gridguide.png</string>
    <string name="apps_infolder_grid_guide_image_path">homescreen_apptray_lattice.png</string>
    <string name="apps_menu_view_type_cancel">Cancel</string>
    <string name="apps_menu_view_type_title">View as</string>
    <string name="apps_screen">Applications</string>
    <string name="apps_top_title_remove_disable">Uninstall/disable apps</string>
    <string name="apps_transition_effect">Apps List Transition effect</string>
    <string name="apps_view_menu_button">Menu</string>
    <string name="apps_view_type_alphabetical">Alphabetical grid</string>
    <string name="apps_view_type_custom">Customizable grid</string>
    <string name="apps_view_type_downloaded">Downloaded apps</string>
    <string name="back">back</string>
    <string name="begin_word">begin</string>
    <string name="button_format">%s button</string>
    <string name="cancel">Cancel</string>
    <string name="cling_do_not_show_again">Do not show again</string>
    <string name="create_folder_hint">Enter folder name</string>
    <string name="create_folder_title">Create folder</string>
    <string name="cursor_beginning">Cursor to the beginning</string>
    <string name="cursor_end">Cursor to the end</string>
    <string name="default_background">page_view_overlay.9.png</string>
    <string name="default_page_name_template">Page %d</string>
    <string name="default_scroll_bar_image">scrollbar.9.png</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="direct_dial">Direct Dial</string>
    <string name="direct_message">Direct Message</string>
    <string name="disable_message">%s and all the features related to it will be disabled.</string>
    <string name="disable_title">Disable app</string>
    <string name="disable_uninstall_message">%s and all the features related to it will be disabled. Your data will also be deleted.</string>
    <string name="disable_uninstall_reset">Reset</string>
    <string name="disable_uninstall_title">Disable and reset</string>
    <string name="dnd_effect">DnD effect</string>
    <string name="done">DONE</string>
    <string name="double_tap_to_open">Double tap to open</string>
    <string name="edit_box">Edit Box</string>
    <string name="edit_text_view_max_length_notification">Up to %d characters available</string>
    <string name="emitter_particle_image">particle.png</string>
    <string name="end_word">end</string>
    <string name="folder_add_btn">Add application button</string>
    <string name="folder_closed">Folder Closed.</string>
    <string name="folder_color_blue">blue</string>
    <string name="folder_color_green">green</string>
    <string name="folder_color_grey">grey</string>
    <string name="folder_color_options">Folder Color Options</string>
    <string name="folder_color_orange">orange</string>
    <string name="folder_color_yellow">yellow</string>
    <string name="folder_open">Folder opened.</string>
    <string name="folder_word">Folder</string>
    <string name="fragment_transition_effect">Fragment Transition Effect</string>
    <string name="google_folder_name">Google</string>
    <string name="google_search">Google Search</string>
    <string name="grid_span_text_format">%1$d x %2$d</string>
    <string name="home_edit_add_to_personal">Add to personal</string>
    <string name="home_edit_appinfo">App info</string>
    <string name="home_edit_delete_folder">Remove</string>
    <string name="home_edit_delete_page">Remove</string>
    <string name="home_edit_disable">Disable</string>
    <string name="home_edit_page">Create page</string>
    <string name="home_edit_to_homescreen">Homescreen</string>
    <string name="home_edit_uninstall">Uninstall</string>
    <string name="home_grid_guide_image_path">home_gridguide.png</string>
    <string name="home_screen">Home Screen</string>
    <string name="home_screen_content">Home screen content</string>
    <string name="home_screen_mode_apps">Show separate Apps screen</string>
    <string name="home_screen_mode_change_alert_title">Change home screen content</string>
    <string name="home_screen_mode_change_to_apps_alert">A separate Apps screen will be created so that you can easily find your most important apps via the Apps icon on the home screen. Any customisations you have previously made to the home screen will be discarded.</string>
    <string name="home_screen_mode_change_to_only_home_alert">All your apps will be shown on the home screen. Any customisations you have previously made to the home screen will be discarded</string>
    <string name="home_screen_mode_only_home">Show all apps on home screen</string>
    <string name="home_settings_title">Settings</string>
    <string name="homes_screen_settings">Home screen settings</string>
    <string name="item_added">Item added.</string>
    <string name="item_moved">Item moved.</string>
    <string name="item_moved_to_menu_bar">Item moved to menu bar on home screen.</string>
    <string name="item_moved_to_other_page">Item moved to home screen %1$d of %2$d.</string>
    <string name="item_removed">Item removed.</string>
    <string name="items_swapped">Items swapped.</string>
    <string name="long_press_widget_to_add">Tap and hold a widget to move it</string>
    <string name="long_pressed">%s tapped and held.</string>
    <string name="magazine_softkey_my_files">My Files</string>
    <string name="magazine_summary">View all my Magazine updates in one place on the homescreen</string>
    <string name="max_characters_available">Up to %d characters available</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_help">Help</string>
    <string name="menu_item_add_item">Add to home screen</string>
    <string name="menu_search">Search</string>
    <string name="menu_uninstall">Uninstall app</string>
    <string name="microsoft_folder_name">Microsoft Apps</string>
    <string name="mockup_background">page_view_overlay.9.png</string>
    <string name="my_magazine">My Magazine</string>
    <string name="new_item">1 new item</string>
    <string name="new_items">%d new items</string>
    <string name="no_downloaded_apps">No downloaded applications</string>
    <string name="no_item_format">%d items</string>
    <string name="no_permission_activity">Not Installed with permission needed</string>
    <string name="no_search_results">No search results</string>
    <string name="not_selected">Not selected</string>
    <string name="number_format_selected">%d selected</string>
    <string name="ok">OK</string>
    <string name="only_one_widget_instance_allowed">The widget has already been added to the home screen</string>
    <string name="open_folder">Open folder</string>
    <string name="open_folder_vzw">View apps</string>
    <string name="option_tray_add_widget">Widgets</string>
    <string name="option_tray_not_use_theme">Applying a new theme is not possible on this display unit.</string>
    <string name="option_tray_screen_settings">Screen settings</string>
    <string name="option_tray_screengrid">Screen grid</string>
    <string name="option_tray_set_wallpaper">Wallpapers</string>
    <string name="option_tray_settings">Settings</string>
    <string name="option_tray_theme">Themes</string>
    <string name="options_menu_apps_for_galaxy">GALAXY essentials</string>
    <string name="options_menu_button_description">More options</string>
    <string name="options_menu_button_title">More</string>
    <string name="options_menu_create_folder">Create Folder</string>
    <string name="options_menu_disable">Uninstall/Disable apps</string>
    <string name="options_menu_downloaded_apps">Downloaded apps</string>
    <string name="options_menu_edit">EDIT</string>
    <string name="options_menu_search">Search</string>
    <string name="options_menu_sel_apps_to_enable">Show disabled apps</string>
    <string name="options_menu_sel_apps_to_hide">Hide apps</string>
    <string name="options_menu_sel_apps_to_unhide">Show hidden apps</string>
    <string name="options_menu_uninstall">Uninstall</string>
    <string name="out_of_space">No more room on this page</string>
    <string name="page_edit_mode">Mode switched to Page edit mode.</string>
    <string name="page_indicator_content_description_format">Page %1$d of %2$d</string>
    <string name="page_moved">Page moved to %1$d of %2$d.</string>
    <string name="quick_contact">Contact</string>
    <string name="remove_app_folder_cancel">Cancel</string>
    <string name="remove_app_folder_confirm">Delete</string>
    <string name="remove_app_folder_confirm_USA">Remove</string>
    <string name="remove_app_folder_message">%s will be deleted. Any apps inside this folder will not be uninstalled.</string>
    <string name="remove_app_folder_message_USA">The %s folder will be removed. Apps inside this folder will be listed at the end of App tray.</string>
    <string name="remove_app_folder_message_no_title">This folder will be deleted. Any apps inside this folder will not be uninstalled.</string>
    <string name="remove_app_folder_message_no_title_USA">This folder will be removed. Apps inside this folder will be listed at the end of App tray.</string>
    <string name="remove_app_folder_title">Delete folder</string>
    <string name="remove_app_folder_title_USA">Remove folder</string>
    <string name="screen_grid_4x4">4x4</string>
    <string name="screen_grid_4x5">4x5</string>
    <string name="screen_grid_5x5">5x5</string>
    <string name="searchapp_tts_list">List</string>
    <string name="select_all_app">All</string>
    <string name="select_app_add">Add</string>
    <string name="selected">Selected</string>
    <string name="shortcut_duplicate">Shortcut %s already exists</string>
    <string name="shortcut_installed">Shortcut to %s added on home screen.</string>
    <string name="shortcut_uninstalled">Shortcut %s removed.</string>
    <string name="social_folder_name">Social</string>
    <string name="sound_mode_to_sound">Sound mode set to Sound.</string>
    <string name="sound_mode_to_vibrate">Sound mode set to Vibrate.</string>
    <string name="transition_effect">Home Transition effect</string>
</resources>