<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/options_menu_edit" android:title="@string/options_menu_edit" />
    <item android:id="@id/options_menu_create_folder" android:title="@string/options_menu_create_folder" />
    <item android:id="@id/options_menu_view_type" android:title="@string/apps_menu_view_type_title" />
    <item android:id="@id/options_menu_downloaded_apps" android:title="@string/options_menu_downloaded_apps" />
    <item android:id="@id/options_menu_uninstall" android:title="@string/options_menu_disable" />
    <item android:id="@id/options_menu_sel_apps_to_hide" android:title="@string/options_menu_sel_apps_to_hide" />
    <item android:id="@id/options_menu_sel_apps_to_enable" android:title="@string/options_menu_sel_apps_to_enable" />
    <item android:id="@id/options_menu_sel_apps_to_unhide" android:title="@string/options_menu_sel_apps_to_unhide" />
    <item android:id="@id/options_menu_apps_for_galaxy" android:title="@string/options_menu_apps_for_galaxy" />
    <item android:id="@id/options_home_help" android:orderInCategory="6" android:title="@string/menu_help" />
</menu>