<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/home_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:layout="@layout/home_settings_view" android:title="@string/home_settings_title" android:selectable="false" />
    <ListPreference android:entries="@array/transition_effect" android:title="@string/transition_effect" android:key="home_settings_transition_effect" android:dialogTitle="@string/transition_effect" android:entryValues="@array/transition_effect_values" />
    <ListPreference android:entries="@array/transition_effect" android:title="@string/apps_transition_effect" android:key="apps_list_transition_effect" android:dialogTitle="@string/apps_transition_effect" android:entryValues="@array/transition_effect_values" />
    <ListPreference android:entries="@array/dnd_effect" android:title="@string/dnd_effect" android:key="home_settings_dnd_effect" android:dialogTitle="@string/dnd_effect" android:entryValues="@array/dnd_effect_values" />
    <CheckBoxPreference android:title="@string/my_magazine" android:key="my_magazine" android:summary="@string/magazine_summary" android:defaultValue="true" android:dialogTitle="@string/my_magazine" />
    <ListPreference android:entries="@array/fragment_transition_effect" android:title="@string/fragment_transition_effect" android:key="home_settings_fragment_transition_effect" android:dialogTitle="@string/fragment_transition_effect" android:entryValues="@array/fragment_transition_effect_values" />
    <SwitchPreference android:enabled="@bool/enable_power_saving_mode" android:title="Power Saving mode" android:key="power_saving_mode" android:summary="Change to power saving mode" android:shouldDisableView="true" />
    <SwitchPreference android:enabled="@bool/enable_wallpaper_blur" android:title="Blur Effects" android:key="blur_wallpaper_mode" android:summary="Enable blur effects" android:shouldDisableView="true" />
    <SwitchPreference android:enabled="@bool/enable_parallax_effect" android:title="Parallax Effect" android:key="parallax_effect_mode" android:shouldDisableView="true" />
    <SwitchPreference android:enabled="@bool/enable_weather_effect" android:title="Weather Effect" android:key="weather_effect_mode" android:summary="Enable weather effects" android:shouldDisableView="true" />
    <ListPreference android:entries="@array/fragment_transition_effect" android:title="@string/fragment_transition_effect" android:key="home_settings_fragment_transition_effect" android:dialogTitle="@string/fragment_transition_effect" android:entryValues="@array/fragment_transition_effect_values" />
    <EditTextPreference android:title="Texture Scale Ratio" android:key="home_settings_texture_scale_ratio" android:defaultValue="100" android:dialogTitle="Texture Scale Ratio" />
    <EditTextPreference android:title="Pan Gesture Prediction" android:key="home_settings_gesture_prediction" android:defaultValue="0" android:dialogTitle="Pan Gesture Prediction" />
    <EditTextPreference android:title="Pan Gesture Smoothing" android:key="home_settings_gesture_smoothing" android:defaultValue="1" android:dialogTitle="Pan Gesture Smoothing" />
</PreferenceScreen>