<?xml version="1.0" encoding="utf-8"?>
<com.sec.daliviews.views.ClippedContainerView android:id="@id/home_edit_bar" android:background="@drawable/home_menu_top_bg" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_height" dali:layerHeight="@integer/layer_hot_seat" dali:clip="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dali="http://schemas.android.com/apk/res-auto">
    <use_layout layout="@layout/linear_layout_horizontal" />
    <com.sec.daliviews.views.ContainerView android:layout_gravity="top" android:id="@id/home_edit_bar_left_dummy_area" android:visibility="gone" android:layout_width="@dimen/home_edit_bar_left_dummy_width" android:layout_height="fill_parent" />
    <com.sec.daliviews.views.ContainerView android:layout_gravity="top" android:id="@id/home_edit_bar_create_page" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/home_edit_page">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <com.sec.daliviews.views.ImageView android:layout_gravity="top" android:id="@id/home_edit_bar_create_page_hover" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/circle_shape" dali:scaleType="centerCrop" />
            <com.sec.daliviews.views.ImageView android:layout_gravity="center" android:id="@id/home_edit_bar_icon" android:layout_width="@dimen/home_edit_bar_icon_width" android:layout_height="@dimen/home_edit_bar_icon_height" android:layout_marginTop="@dimen/home_edit_bar_img_margin_top" android:src="@drawable/toolbar_ic_create_page_normal" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/home_edit_page" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/home_edit_bar_uninstall" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/home_edit_uninstall">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ImageView android:layout_gravity="center|top" android:id="@id/home_edit_bar_uninstall_hover" android:visibility="invisible" android:layout_width="@dimen/home_edit_bar_focus_bg_width" android:layout_height="fill_parent" android:src="@drawable/circle_shape" dali:scaleType="centerCrop" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <include layout="@layout/trash_can_animated" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:id="@id/home_edit_bar_uninstall_text" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/home_edit_uninstall" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
        <include layout="@layout/home_edit_bar_divied" />
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/home_edit_bar_add_to_personal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/home_edit_add_to_personal">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ImageView android:layout_gravity="center|top" android:id="@id/home_edit_add_to_personal_hover" android:visibility="invisible" android:layout_width="@dimen/home_edit_bar_focus_bg_width" android:layout_height="fill_parent" android:src="@drawable/circle_shape" dali:scaleType="centerCrop" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <include layout="@layout/add_to_personal" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/home_edit_add_to_personal" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/home_edit_bar_cancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/cancel">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ImageView android:layout_gravity="center|top" android:id="@id/home_edit_bar_cancel_hover" android:visibility="invisible" android:layout_width="@dimen/home_edit_bar_focus_bg_width" android:layout_height="fill_parent" android:src="@drawable/circle_shape" dali:scaleType="centerCrop" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <include layout="@layout/cancel_can_animated" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:id="@id/home_edit_bar_text_cancel" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/cancel" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
        <include layout="@layout/home_edit_bar_divied" />
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/home_edit_bar_remove_folder" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/home_edit_delete_folder">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ImageView android:layout_gravity="center|top" android:id="@id/home_edit_bar_remove_folder_hover" android:visibility="invisible" android:layout_width="@dimen/home_edit_bar_focus_bg_width" android:layout_height="fill_parent" android:src="@drawable/circle_shape" dali:scaleType="centerCrop" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <include layout="@layout/trash_can_animated" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:id="@id/home_edit_bar_remove_folder_text" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/home_edit_delete_folder" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
        <include layout="@layout/home_edit_bar_divied" />
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/home_edit_bar_remove_page" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/home_edit_delete_page">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ImageView android:layout_gravity="center|top" android:id="@id/home_edit_bar_remove_page_hover" android:visibility="invisible" android:layout_width="@dimen/home_edit_bar_focus_bg_width" android:layout_height="fill_parent" android:src="@drawable/circle_shape" dali:scaleType="centerCrop" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <include layout="@layout/trash_can_animated" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:id="@id/home_edit_bar_remove_page_text" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/home_edit_delete_page" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
        <include layout="@layout/home_edit_bar_divied" />
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/home_edit_bar_to_homescreen" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/home_edit_to_homescreen">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ImageView android:layout_gravity="top" android:id="@id/home_edit_bar_to_homescreen_hover" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/circle_shape" dali:scaleType="centerCrop" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <com.sec.daliviews.views.ImageView android:layout_gravity="center" android:layout_width="@dimen/home_edit_bar_icon_width" android:layout_height="@dimen/home_edit_bar_icon_height" android:layout_marginTop="@dimen/home_edit_bar_img_margin_top" android:src="@drawable/homescreen_toolbar_ic_homescreen" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/home_edit_to_homescreen" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:layout_gravity="top" android:id="@id/home_edit_bar_right_dummy_area" android:visibility="gone" android:layout_width="@dimen/home_edit_bar_right_dummy_width" android:layout_height="fill_parent" />
</com.sec.daliviews.views.ClippedContainerView>