<?xml version="1.0" encoding="utf-8"?>
<com.sec.daliviews.views.ClippedContainerView android:id="@id/menu_edit_bar" android:background="@drawable/home_menu_top_bg" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_height" dali:layerHeight="@integer/layer_hot_seat" dali:clip="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dali="http://schemas.android.com/apk/res-auto">
    <use_layout layout="@layout/linear_layout_horizontal" />
    <com.sec.daliviews.views.ContainerView android:id="@id/menu_edit_bar_uninstall" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/home_edit_uninstall">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <include layout="@layout/trash_can_animated" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:id="@id/menu_edit_bar_uninstall_text" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/home_edit_uninstall" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
        <com.sec.daliviews.views.ImageView android:layout_gravity="top" android:id="@id/menu_edit_bar_uninstall_hover" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/drag_enter_red" dali:scaleType="fitXY" />
        <include layout="@layout/home_edit_bar_divied" />
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:layout_gravity="top" android:id="@id/apps_edit_bar_addtohome" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/menu_item_add_item">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <include layout="@layout/add_to_home_animated" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:id="@id/apps_edit_bar_addtohome_text" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/menu_item_add_item" android:maxLines="1" />
            <include layout="@layout/home_edit_bar_divied" />
        </com.sec.daliviews.views.ContainerView>
        <com.sec.daliviews.views.ImageView android:layout_gravity="top" android:id="@id/apps_edit_bar_addtohome_hover" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/drag_enter_blue" dali:scaleType="fitXY" />
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/apps_edit_bar_cancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/cancel">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <com.sec.daliviews.views.ImageView android:layout_gravity="center" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="@dimen/home_edit_bar_img_margin_top" android:src="@drawable/home_menu_top_ic_cancel" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/cancel" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
        <com.sec.daliviews.views.ImageView android:layout_gravity="top" android:id="@id/apps_edit_bar_cancel_hover" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/drag_enter_red" dali:scaleType="fitXY" />
        <include layout="@layout/home_edit_bar_divied" />
    </com.sec.daliviews.views.ContainerView>
    <com.sec.daliviews.views.ContainerView android:id="@id/apps_edit_bar_to_apps" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/apps">
        <use_layout layout="@layout/frame_layout" />
        <com.sec.daliviews.views.ContainerView android:layout_gravity="center" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <use_layout layout="@layout/linear_layout_vertical" />
            <com.sec.daliviews.views.ImageView android:layout_gravity="center" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="@dimen/home_edit_bar_img_margin_top" android:src="@drawable/homescreen_toolbar_ic_apps" />
            <com.sec.daliviews.views.TextView android:textSize="@dimen/home_edit_bar_font_size" android:textColor="@color/editbar_title_font_color" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/home_edit_bar_text_height" android:text="@string/apps" android:maxLines="1" />
        </com.sec.daliviews.views.ContainerView>
        <com.sec.daliviews.views.ImageView android:layout_gravity="top" android:id="@id/apps_edit_bar_to_apps_hover" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/drag_enter_red" dali:scaleType="fitXY" />
        <include layout="@layout/home_edit_bar_divied" />
    </com.sec.daliviews.views.ContainerView>
</com.sec.daliviews.views.ClippedContainerView>